--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
 			var theRiver;
 			function onGetRiverStream (updatedFeeds) {
 				theRiver = updatedFeeds;
-        displayFeeds();
-				}
+    			displayFeeds();
+			}
 			$.ajax ({ 
 				url: "http://rss.scripting.com/rivers/nytRiver.js",  
 				dataType: "jsonp"
-				});
-      function displayFeeds() {
-        var feedText = "";
-        // Create title
-        for (var i in theRiver.updatedFeeds.updatedFeed) {
-           feedText = feedText + theRiver.updatedFeeds.updatedFeed[i].feedTitle + " <a href=" + theRiver.updatedFeeds.updatedFeed[i].feedUrl + "> (Feed) " + "</a><br>"; 
-           feedText = feedText + "<a href=" + theRiver.updatedFeeds.updatedFeed[i].item[0].link + ">" + theRiver.updatedFeeds.updatedFeed[i].item[0].title + "</a><br>"; 
-           feedText = feedText + theRiver.updatedFeeds.updatedFeed[i].item[0].body + "<br>"; 
-           feedText = feedText + "<br>";
-        }
-	      document.getElementById("demo").innerHTML = feedText; 
-      }
-			</script>
+			});
+  			function displayFeeds() {
+    			var feedText = "";
+				 // Create title
+    			for (var i in theRiver.updatedFeeds.updatedFeed) {
+       				feedText = feedText + theRiver.updatedFeeds.updatedFeed[i].feedTitle + " <a href=" + theRiver.updatedFeeds.updatedFeed[i].feedUrl + "> (Feed) " + "</a><br>"; 
+       				feedText = feedText + "<a href=" + theRiver.updatedFeeds.updatedFeed[i].item[0].link + ">" + theRiver.updatedFeeds.updatedFeed[i].item[0].title + "</a><br>"; 
+       				feedText = feedText + theRiver.updatedFeeds.updatedFeed[i].item[0].body + "<br>"; 
+       				feedText = feedText + "<br>";
+    			}
+      			document.getElementById("demo").innerHTML = feedText; 
+  			}
+		</script>
 	</head>
-<body>
-    <h1><center>Minimal River.js Feed Reader</center></h1>
-    <p id="demo">Wating for feeds to load....</p> 
-</body>
+	<body>
+	    <h1>Minimal River.js Feed Reader</h1>
+	    <div id="demo">Waiting for feeds to load....</div> 
+	</body>
 </html>
