--- a/index.html
+++ b/index.html
@@ -1,32 +1,79 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Minimal River.js Feed Reader</title>
-		<script src="http://fargo.io/code/jquery-1.9.1.min.js"></script>
-		<script>
-			var theRiver;
-			function onGetRiverStream (updatedFeeds) {
-				theRiver = updatedFeeds;
-    			displayFeeds();
-			}
-			$.ajax ({ 
-				url: "http://rss.scripting.com/rivers/nytRiver.js",  
-				dataType: "jsonp"
-			});
-  			function displayFeeds() {
-    			var feedText = "";
-				 // Create title
-    			for (var i in theRiver.updatedFeeds.updatedFeed) {
-       				feedText = feedText + theRiver.updatedFeeds.updatedFeed[i].feedTitle + " <a href=" + theRiver.updatedFeeds.updatedFeed[i].feedUrl + "> (Feed) " + "</a><br>"; 
-       				feedText = feedText + "<a href=" + theRiver.updatedFeeds.updatedFeed[i].item[0].link + ">" + theRiver.updatedFeeds.updatedFeed[i].item[0].title + "</a><br>"; 
-       				feedText = feedText + theRiver.updatedFeeds.updatedFeed[i].item[0].body + "<br>"; 
-       				feedText = feedText + "<br>";
-    			}
-      			document.getElementById("demo").innerHTML = feedText; 
-  			}
-		</script>
-	</head>
-	<body>
-	    <h1>Minimal River.js Feed Reader</h1>
-	    <div id="demo">Waiting for feeds to load....</div> 
-	</body>
+    <head>
+        <title>Minimal River.js Feed Reader</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <script src="http://fargo.io/code/jquery-1.9.1.min.js"></script>
+        <script>
+            if (typeof jQuery === 'undefined') throw "jQuery Required";
+            /**
+             * printf function
+             * @link http://stackoverflow.com/questions/610406/javascript-equivalent-to-printf-string-format
+             */
+            if (!String.format) {
+              String.format = function(format) {
+                var args = Array.prototype.slice.call(arguments, 1);
+                return format.replace(/{(\d+)}/g, function(match, number) { 
+                  return typeof args[number] != 'undefined'
+                    ? args[number] 
+                    : match
+                  ;
+                });
+              };
+            }
+            var theRiver;
+            function onGetRiverStream (updatedFeeds) {
+                theRiver = updatedFeeds;
+                displayFeeds();
+            }
+            function displayFeeds() {
+                var feedText = '';
+                for (var feed in theRiver.updatedFeeds.updatedFeed) {
+                    feedText += String.format(
+                        "\
+                        <li class='list-group-item'>\n\
+                            <div><strong><a href='{0}'>{1}</a></strong></div>\n\
+                            <div><a href='{2}'>{3}</a></div>\n\
+                            <p>{4}</p>\n\
+                        </li>\n\
+                        ", 
+                        theRiver.updatedFeeds.updatedFeed[feed].feedUrl, 
+                        theRiver.updatedFeeds.updatedFeed[feed].feedTitle,
+                        theRiver.updatedFeeds.updatedFeed[feed].item[0].link,
+                        theRiver.updatedFeeds.updatedFeed[feed].item[0].title,
+                        theRiver.updatedFeeds.updatedFeed[feed].item[0].body
+                    );
+                }
+                document.getElementById('demo').innerHTML = feedText; 
+            }
+            /**
+             * DOM ready execution
+             *
+             * @param {object} $
+             * @returns {undefined}
+             * @link http://api.jquery.com/jQuery/#jQuery3 failsafe $ alias
+             */
+            jQuery(function ($) {
+                $.ajax ({ 
+                    url: 'http://rss.scripting.com/rivers/nytRiver.js',  
+                    dataType: 'jsonp'
+                });
+            });
+        </script>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1>Minimal River.js Feed Reader</h1>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Rivers</div>
+                        <ul id="demo" class="list-group">
+                            <li class="list-group-item">Waiting for feeds to load...</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
