putting the river back to NYT as the other is a static river

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
              */
             jQuery(function ($) {
                 $.ajax ({ 
-                    url: 'http://static.scripting.com/river3/rivers/iowa.js',  
+                    url: 'http://rss.scripting.com/rivers/nytRiver.js',  
                     dataType: 'jsonp'
                 });
             });
